[gd_scene load_steps=43 format=3 uid="uid://6ddc1y0q3bhc"]

[ext_resource type="Script" path="res://entities/crew/CrewMember.gd" id="1_jot6k"]
[ext_resource type="Texture2D" uid="uid://dhxmp0xpmlnfc" path="res://assets/sprites/idle_agatha.png" id="2_fs5c3"]
[ext_resource type="Texture2D" uid="uid://dl20q4t7m3dex" path="res://assets/sprites/walk_agatha.png" id="3_irob2"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="4_0j6fd"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="5_yryhh"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="6_7dl77"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="7_15qs3"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="8_tteow"]
[ext_resource type="Script" path="res://addons/godot_state_charts/expression_guard.gd" id="9_i3j20"]
[ext_resource type="Script" path="res://entities/crew/ai/CrewAI.gd" id="10_wsqwl"]
[ext_resource type="Script" path="res://common/ai/utility/agent/UtilityAIAgent.gd" id="11_g6tur"]
[ext_resource type="Script" path="res://entities/crew/ai/actions/IdleAction.gd" id="12_5sd2t"]
[ext_resource type="Script" path="res://common/ai/utility/consideration/UtilityAICurveConsideration.gd" id="13_lbf4u"]
[ext_resource type="Script" path="res://entities/crew/ai/actions/WorkAction.gd" id="14_e63tw"]
[ext_resource type="Script" path="res://common/ai/utility/consideration/UtilityAIBooleanConsideration.gd" id="15_82tfv"]
[ext_resource type="Script" path="res://entities/crew/components/CrewVigour.gd" id="16_vigour"]
[ext_resource type="Script" path="res://entities/crew/components/CrewMovement.gd" id="17_movement"]
[ext_resource type="Script" path="res://entities/crew/components/CrewAnimation.gd" id="18_animation"]
[ext_resource type="Script" path="res://entities/crew/components/CrewSpeech.gd" id="19_speech"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6x332"]
radius = 40.0125

[sub_resource type="Resource" id="Resource_a4okr"]
script = ExtResource("9_i3j20")
expression = "assignment == \"\""

[sub_resource type="Resource" id="Resource_iydo8"]
script = ExtResource("9_i3j20")
expression = "assignment == \"work\""

[sub_resource type="Animation" id="Animation_8m754"]
length = 0.001

[sub_resource type="Animation" id="Animation_fqiqv"]
resource_name = "idle_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AgathaIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_wfjsr"]
resource_name = "idle_down_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AgathaIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_35s25"]
resource_name = "idle_down_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AgathaIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_bl0gl"]
resource_name = "idle_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AgathaIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_cuwvj"]
resource_name = "idle_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AgathaIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_4ebcw"]
resource_name = "idle_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AgathaIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_o78qo"]
resource_name = "idle_up_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AgathaIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_4emcy"]
resource_name = "idle_up_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AgathaIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_n3lp8"]
resource_name = "walk_down"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_y8cqc"]
resource_name = "walk_down_left"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_ml2ed"]
resource_name = "walk_down_right"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_i3ram"]
resource_name = "walk_left"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_hvvw8"]
resource_name = "walk_right"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59]
}

[sub_resource type="Animation" id="Animation_yg0rc"]
resource_name = "walk_up"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83]
}

[sub_resource type="Animation" id="Animation_8jnjb"]
resource_name = "walk_up_left"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95]
}

[sub_resource type="Animation" id="Animation_i03w8"]
resource_name = "walk_up_right"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lynlg"]
_data = {
"RESET": SubResource("Animation_8m754"),
"idle_down": SubResource("Animation_fqiqv"),
"idle_down_left": SubResource("Animation_wfjsr"),
"idle_down_right": SubResource("Animation_35s25"),
"idle_left": SubResource("Animation_bl0gl"),
"idle_right": SubResource("Animation_cuwvj"),
"idle_up": SubResource("Animation_4ebcw"),
"idle_up_left": SubResource("Animation_o78qo"),
"idle_up_right": SubResource("Animation_4emcy"),
"walk_down": SubResource("Animation_n3lp8"),
"walk_down_left": SubResource("Animation_y8cqc"),
"walk_down_right": SubResource("Animation_ml2ed"),
"walk_left": SubResource("Animation_i3ram"),
"walk_right": SubResource("Animation_hvvw8"),
"walk_up": SubResource("Animation_yg0rc"),
"walk_up_left": SubResource("Animation_8jnjb"),
"walk_up_right": SubResource("Animation_i03w8")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ynwli"]
radius = 39.0
height = 146.0

[sub_resource type="Curve" id="Curve_j4pgs"]
_data = [Vector2(0, 0.200045), 0.0, 0.0, 0, 0]
point_count = 1

[node name="Crew" type="CharacterBody2D"]
z_index = 3
collision_layer = 10
collision_mask = 11
input_pickable = true
motion_mode = 1
safe_margin = 2.0
script = ExtResource("1_jot6k")

[node name="FeetCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_6x332")
one_way_collision = true
one_way_collision_margin = 10.0
debug_color = Color(0.337255, 0.607843, 0.364706, 0.419608)
metadata/_edit_lock_ = true

[node name="AgathaIdle" type="Sprite2D" parent="."]
position = Vector2(0, -100)
texture = ExtResource("2_fs5c3")
hframes = 8
frame = 2
metadata/_edit_lock_ = true

[node name="AgathaWalk" type="Sprite2D" parent="."]
position = Vector2(0, -100)
texture = ExtResource("3_irob2")
hframes = 12
vframes = 8
metadata/_edit_lock_ = true

[node name="CrewStateManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_0j6fd")

[node name="ParallelState" type="Node" parent="CrewStateManager"]
script = ExtResource("5_yryhh")

[node name="CrewState" type="Node" parent="CrewStateManager/ParallelState"]
script = ExtResource("6_7dl77")
initial_state = NodePath("Idling")

[node name="Idling" type="Node" parent="CrewStateManager/ParallelState/CrewState"]
script = ExtResource("7_15qs3")

[node name="ToWalking" type="Node" parent="CrewStateManager/ParallelState/CrewState/Idling"]
script = ExtResource("8_tteow")
to = NodePath("../../Walking")
event = &"walk"

[node name="Walking" type="Node" parent="CrewStateManager/ParallelState/CrewState"]
script = ExtResource("7_15qs3")

[node name="ToIdling" type="Node" parent="CrewStateManager/ParallelState/CrewState/Walking"]
script = ExtResource("8_tteow")
to = NodePath("../../Idling")
event = &"idle"

[node name="ToIdlingFromAssignment" type="Node" parent="CrewStateManager/ParallelState/CrewState/Walking"]
script = ExtResource("8_tteow")
to = NodePath("../../Idling")
event = &"to_assignment"
guard = SubResource("Resource_a4okr")

[node name="ToWorkingFromAssignment" type="Node" parent="CrewStateManager/ParallelState/CrewState/Walking"]
script = ExtResource("8_tteow")
to = NodePath("../../Working")
event = &"to_assignment"
guard = SubResource("Resource_iydo8")

[node name="Working" type="Node" parent="CrewStateManager/ParallelState/CrewState"]
script = ExtResource("7_15qs3")

[node name="ToIdling" type="Node" parent="CrewStateManager/ParallelState/CrewState/Working"]
script = ExtResource("8_tteow")
to = NodePath("../../Idling")
event = &"idle"

[node name="InteractionState" type="Node" parent="CrewStateManager/ParallelState"]
script = ExtResource("6_7dl77")
initial_state = NodePath("None")

[node name="None" type="Node" parent="CrewStateManager/ParallelState/InteractionState"]
script = ExtResource("7_15qs3")

[node name="ToAssigning" type="Node" parent="CrewStateManager/ParallelState/InteractionState/None"]
script = ExtResource("8_tteow")
to = NodePath("../../Assigning")
event = &"assign"

[node name="Assigning" type="Node" parent="CrewStateManager/ParallelState/InteractionState"]
script = ExtResource("7_15qs3")

[node name="ToNone" type="Node" parent="CrewStateManager/ParallelState/InteractionState/Assigning"]
script = ExtResource("8_tteow")
to = NodePath("../../None")
event = &"assigned"

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
path_max_distance = 200.0
path_postprocessing = 1
avoidance_enabled = true
avoidance_layers = 15
avoidance_mask = 15
debug_enabled = true

[node name="Timer" type="Timer" parent="Navigation"]
wait_time = 0.3
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AgathaWalk")
libraries = {
"": SubResource("AnimationLibrary_lynlg")
}

[node name="BodyArea" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 32768
metadata/_edit_lock_ = true

[node name="BodyCollisionShape" type="CollisionShape2D" parent="BodyArea"]
position = Vector2(-1, -123)
shape = SubResource("CapsuleShape2D_ynwli")
debug_color = Color(0.678431, 0.356863, 0.894118, 0.419608)

[node name="CrewVigour" type="Node" parent="."]
script = ExtResource("16_vigour")

[node name="CrewMovement" type="Node" parent="."]
script = ExtResource("17_movement")

[node name="CrewAnimation" type="Node" parent="."]
script = ExtResource("18_animation")

[node name="CrewSpeech" type="Node" parent="."]
script = ExtResource("19_speech")

[node name="CrewAI" type="Node" parent="."]
script = ExtResource("10_wsqwl")

[node name="Agent" type="Node" parent="CrewAI"]
unique_name_in_owner = true
script = ExtResource("11_g6tur")

[node name="IdleAction" type="Node" parent="CrewAI/Agent"]
script = ExtResource("12_5sd2t")
action_name = &"idle"

[node name="DefaultConsideration" type="Node" parent="CrewAI/Agent/IdleAction"]
script = ExtResource("13_lbf4u")
curve = SubResource("Curve_j4pgs")
consideration_name = &"default"

[node name="WorkAction" type="Node" parent="CrewAI/Agent"]
script = ExtResource("14_e63tw")
action_name = &"work"

[node name="IsWithinWorkingHoursConsideration" type="Node" parent="CrewAI/Agent/WorkAction" node_paths=PackedStringArray("node")]
script = ExtResource("15_82tfv")
node = NodePath("../../../..")
method = &"is_within_working_hours"
consideration_name = &"is_within_working_hours"

[node name="IsAssignedConsideration" type="Node" parent="CrewAI/Agent/WorkAction" node_paths=PackedStringArray("node")]
script = ExtResource("15_82tfv")
node = NodePath("../../../..")
method = &"is_assigned"
consideration_name = &"is_assigned"

[node name="DecisionTimer" type="Timer" parent="CrewAI"]
unique_name_in_owner = true
wait_time = 2.0
autostart = true

[connection signal="state_entered" from="CrewStateManager/ParallelState/CrewState/Idling" to="." method="_on_idling_state_entered"]
[connection signal="state_physics_processing" from="CrewStateManager/ParallelState/CrewState/Idling" to="." method="_on_idling_state_physics_processing"]
[connection signal="state_entered" from="CrewStateManager/ParallelState/CrewState/Walking" to="." method="_on_walking_state_entered"]
[connection signal="state_physics_processing" from="CrewStateManager/ParallelState/CrewState/Walking" to="." method="_on_walking_state_physics_processing"]
[connection signal="state_entered" from="CrewStateManager/ParallelState/CrewState/Working" to="." method="_on_working_state_entered"]
[connection signal="state_exited" from="CrewStateManager/ParallelState/CrewState/Working" to="." method="_on_working_state_exited"]
[connection signal="state_physics_processing" from="CrewStateManager/ParallelState/CrewState/Working" to="." method="_on_working_state_physics_processing"]
